# Dataform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dataform.rc
Docs/: DATAFORM_EvalSuite.md  DATAFORM_EvolutionHarness.md  DATAFORM_Full_Project_Plan_and_Scope.md  DATAFORM_LoRA_Training_Pipeline.md  DATAFORM_Master_Project_Plan.md  DATAFORM_MemorySchema.md  DATAFORM_WhyEngine_Spec.md
Docs/summaries/: align_curated.md  alphastock_curated.md  bishop_prml_curated.md  blip2_curated.md  ch05_ga_curated.md  chatdev_curated.md  clip_curated.md  cpp_book_summary.md  d2l_curated.md  deep_portfolio_curated.md  deeplob_curated.md  empirical_asset_pricing_curated.md  equity2vec_curated.md  factor_models_dl_curated.md  fed_inflation_curated.md  fingat_curated.md  finrl_curated.md  flamingo_curated.md  flava_curated.md  generative_agents_curated.md  hats_curated.md  itransformer_curated.md  mitchell_ga_curated.md  ml_algorithms_curated.md  patchtst_curated.md  perceiver_io_curated.md  project_sid_curated.md  sivanandam_ga_curated.md  tgn_curated.md  theory_book_curated.md  theory_book_summary.md  timegpt_curated.md  transformer_cookbook_curated.md  transformers_timeseries_curated.md
cmake/: FindOnnxRuntimeTraining.cmake
qml/: ChatWindow.qml  ConversationSidebar.qml  IdlePanel.qml  LineagePanel.qml  Main.qml  MemoryPanel.qml  SettingsPanel.qml
src/: adaptermanager.cpp  adaptermanager.h  backgroundjobmanager.cpp  backgroundjobmanager.h  clipboardhelper.cpp  clipboardhelper.h  cryptoutil.cpp  cryptoutil.h  datalifecyclemanager.cpp  datalifecyclemanager.h  distillationmanager.cpp  distillationmanager.h  embeddingmanager.cpp  embeddingmanager.h  evalsuite.cpp  evalsuite.h  evolutionengine.cpp  evolutionengine.h  fuzzylogic.h  goaltracker.cpp  goaltracker.h  idlejobcoordinator.cpp  idlejobcoordinator.h  idlescheduler.cpp  idlescheduler.h  learningengine.cpp  learningengine.h  lineagetracker.cpp  lineagetracker.h  llamacppmanager.cpp  llamacppmanager.h  llmprovider.cpp  llmprovider.h  llmresponseparser.cpp  llmresponseparser.h  main.cpp  memorystore.cpp  memorystore.h  modelgeneration.cpp  modelgeneration.h  (+46 more)
tools/: generate_artifacts.py  requirements.txt
